# ttydisp

./: .gitignore  CMakeLists.txt  FindFFmpeg.cmake  colors.h  conf.h  logger.h  logger.hpp  ttydisp.cpp
cmake/: FindFFmpeg.cmake  libvdpau-config.cmake
